# raytracing-in-one-weekend

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  todo.txt
part-1/: .gitignore  Makefile  camera.hpp  colour.hpp  hittable.hpp  image.hpp  main.cpp  material.hpp  output.ppm  ray.hpp  sphere.hpp  util.hpp  vec3.hpp
src/: CMakeLists.txt  aabb.hpp  animated_sphere.cpp  animated_sphere.hpp  bvh_node.cpp  bvh_node.hpp  camera.hpp  colour.hpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  image.cpp  image.hpp  imgui_main.cpp  lua.hpp  main.cpp  material.hpp  material_manager.hpp  mesh_loader.cpp  mesh_loader.hpp  obj_loader.cpp  obj_loader.hpp  ray.hpp  render.hpp  sphere.cpp  sphere.hpp  texture.hpp  triangle.cpp  triangle.hpp  util.hpp  vec.hpp  vec3.hpp
src/objects/: animated_sphere.cpp  animated_sphere.hpp  box.hpp  bvh.cpp  bvh.hpp  bvh_node.cpp  bvh_node.hpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  quad.cpp  quad.hpp  sphere.cpp  sphere.hpp  transformed_hittable.hpp  transformed_instance.hpp  triangle.cpp  triangle.hpp
src/scenes/: all_scenes.hpp  bright_scene.hpp  cornell.hpp  cornell_scene.hpp  dark_diamond.hpp  dark_scene.hpp  diamond.hpp  earth.hpp  flat_bvh_scene.hpp  glass_test.hpp  goose_scene.hpp  instance_scene.hpp  just_cube.hpp  just_goose.hpp  platonic.hpp  scene.hpp  scenes.hpp  simple_scene.hpp  triangles.hpp
